--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
             padding-top: 50px;
         }
         
-        .starter-template {
-            padding: 40px 15px;
-            text-align: center;
+        .btn-primary {
+            margin: 5px;
         }
+        
